--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="left_side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src="akash.JPG" alt="error">
+                    <img src="Akash.JPG" alt="error">
                 </div>
                 <h2>Akash Jan<br><span>Java Development</span></h2>
             </div>
