--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h2 class="title2">Experience</h2>
                 <div class="box">
                     <div class="year_company">
-                        <h5>NOV 1 - DEC 23</h5>
+                        <h5>SEP 23</h5>
                         <h5>Flymingo Teck</h5>
                     </div>
                     <div class="text">
