--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <div class="imgBx">
                     <img src="akash.JPG" alt="error">
                 </div>
-                <h2>Akash Jan<br><span>Web Development</span></h2>
+                <h2>Akash Jan<br><span>Web Developer</span></h2>
             </div>
             <div class="contactInfo">
                 <h3 class="title">Contact Info</h3>
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <span class="text">+9197 3080 3003</span>
+                        <span class="text">+91 9730803003</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
@@ -87,58 +87,47 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <h2 class="title3">Web Developer , React Developer.</h2>
-                <p>To start my career with an esteemed company which helps me grow technically, personally and
+                <h2 class="title3">ReactJs Developer (MERN Stack).</h2>
+                <p>To grow my career with an esteemed company which helps me grow technically, personally and
                     financially and be able to complete the given projects to the best of my ability in the given time
-                    frame.
-                    <br><br> Desired to work hard with experienced people to get better knowledge and improve abilities.
-
+                    frame.<br><br>
                 </p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
                 <div class="box">
                     <div class="year_company">
-                        <h5>NOV 1 - DEC 23</h5>
+                        <h5>1 SEP</h5>
                         <h5>Flymingo Teck</h5>
                     </div>
                     <div class="text">
                         <h4>React Developer</h4>
-                        <p>Learned React Development, JavaScript, Node Js,Express Js, MonoDB. <br> Working on MERN
-                            Stack,  azamdeal.com</p>
+                        <p>Project: www.azamdeal.com <br> Technology: ReactJS Development, JavaScript,
+                            NodeJs,ExpressJs,MonoDB. </p>
                     </div>
+
                 </div>
                 <div class="box">
                     <div class="year_company">
                         <h5>AUG 22 - AUG 23</h5>
-                        <h5>PMC </h5>
+                        <h5>Pune Munciple Corporation<br>(IT Department)</h5>
                     </div>
                     <div class="text">
-                        <h4>Jr Engineering Intern</h4>
-                        <p>Learned Manul Testing , Unit Testing, SQL, Git and Github. <br> Gained work
-                            experice of 1yr , learned how to be team player. (Certified)</p>
+                        <h4>Jr Engineering Intern (Certified Intern)</h4>
+                        <p>Learned ReactJs, Tailwind CSS, Sass, SQL, Git and Github, Postman, Manul Testing , Unit
+                            Testing.</p>
                     </div>
                 </div>
 
                 <div class="box">
                     <div class="year_company">
-                        <h5>March 22 - May 22</h5>
+                        <h5>March 22 - Aug 22</h5>
                         <h5>Flymingo Teck</h5>
                     </div>
                     <div class="text">
-                        <h4>Android Developer</h4>
-                        <p>Learned android application development using java & xml Languages. (Certified)</p>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="year_company">
-                        <h5>March 22 - May 22</h5>
-                        <h5>Flymingo Teck</h5>
-                    </div>
-                    <div class="text">
-                        <h4>Java</h4>
-                        <p>Learned Java language basics and Advance Java. (Certified)</p>
+                        <h4>Java/Android Developer (Certified Intern)</h4>
+                        <p>Learned Java language basics and Advance Java.</p>
+                        <p>Learned android application development using java &#38; Kotline language, with XML .</p>
                     </div>
                 </div>
 
@@ -148,8 +137,8 @@
                         <h5>WebMind IT-Soln</h5>
                     </div>
                     <div class="text">
-                        <h4>Python Developer</h4>
-                        <p>Intership in Python & ML Tecknology. (Certified)</p>
+                        <h4>Python Developer (Certified Intern)</h4>
+                        <p>Intership in Python &#38; ML Tecknology.</p>
                         <p>Project: Enhancing Sentiment Analysis
                             based fake news detection using ELMO</p>
                     </div>
@@ -201,15 +190,15 @@
                         </div>
                     </div>
                     <div class="box">
-                        <h4>Java</h4>
-                        <div class="percent">
-                            <div style="width: 60%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
                         <h4>SQL</h4>
                         <div class="percent">
                             <div style="width: 50%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Java</h4>
+                        <div class="percent">
+                            <div style="width: 60%;"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -226,10 +215,11 @@
             <div class="about interest">
                 <h2 class="title2">Interest</h2>
                 <ul>
-                    <li><i class="fa fa-video-camera" aria-hidden="true"></i> Movies</li>
-                    <li><i class="fa fa-cutlery" aria-hidden="true"></i> Eating</li>
+                    <li><i class="fa fa-code" aria-hidden="true"></i> Coding</li>
+                    <li><i class="fa fa-leanpub" aria-hidden="true"></i> Learning</li>
                     <li><i class="fa fa-plane" aria-hidden="true"></i> Travaling</li>
                     <li><i class="fa fa-tint" aria-hidden="true"></i> Swimming</li>
+
                 </ul>
             </div>
         </div>
