--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="imgBx">
                     <img src="akash.JPG" alt="error">
                 </div>
-                <h2>Akash Jan<br><span>Web Developer</span></h2>
+                <h2>Akash Jan<br><span>App Development</span></h2>
             </div>
             <div class="contactInfo">
                 <h3 class="title">Contact Info</h3>
@@ -87,47 +87,55 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <h2 class="title3">ReactJs Developer (MERN Stack).</h2>
-                <p>To grow my career with an esteemed company which helps me grow technically, personally and
+                <h2 class="title3">React Native Developer.</h2>
+                <p>To start my career with an esteemed company which helps me grow technically, personally and
                     financially and be able to complete the given projects to the best of my ability in the given time
-                    frame.<br><br>
+                    frame.
                 </p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
                 <div class="box">
                     <div class="year_company">
-                        <h5>1 SEP</h5>
+                        <h5>SEP 1 </h5>
                         <h5>Flymingo Teck</h5>
                     </div>
                     <div class="text">
-                        <h4>React Developer</h4>
-                        <p>Project: www.azamdeal.com <br> Technology: ReactJS Development, JavaScript,
-                            NodeJs,ExpressJs,MonoDB. </p>
+                        <h4>React Native Developer .⭐</h4>
+                        <p> 100% contribution to the development and maintenance of the "Arrange Free" mobile app using
+                            React Native<br> Manging the entire app lifecycle, implementing Redux/React Context for
+                            seamless state management and integrating secure RESTful APIs.</p>
                     </div>
-
                 </div>
                 <div class="box">
                     <div class="year_company">
                         <h5>AUG 22 - AUG 23</h5>
-                        <h5>Pune Munciple Corporation<br>(IT Department)</h5>
+                        <h5>PMC -<br> Pune Munuciple Corporation </h5>
                     </div>
                     <div class="text">
-                        <h4>Jr Engineering Intern (Certified Intern)</h4>
-                        <p>Learned ReactJs, Tailwind CSS, Sass, SQL, Git and Github, Postman, Manul Testing , Unit
-                            Testing.</p>
+                        <h4>Jr Engineering Intern (Certified)</h4>
+                        <p>Had a overview of React Native Application, Learned from Youtub and developed a React Native
+                            <br>Dummy App Link:-
+                            <a href="https://github.com/akashJan/React-Native-recipeApp">github.com/akashJan</a>
+                            <br>Learned Manul Testing , Unit Testing, SQL, Git
+                            and Github. <br> Gained work
+                            experice of 1yr , learned how to be team player.
+                        </p>
                     </div>
                 </div>
 
                 <div class="box">
                     <div class="year_company">
                         <h5>March 22 - Aug 22</h5>
-                        <h5>Flymingo Teck</h5>
+                        <h5>Flymingo Teck </h5>
                     </div>
                     <div class="text">
-                        <h4>Java/Android Developer (Certified Intern)</h4>
-                        <p>Learned Java language basics and Advance Java.</p>
-                        <p>Learned android application development using java &#38; Kotline language, with XML .</p>
+                        <h4>Java - Android Development (Certified)</h4>
+                        <p>Learned Java language basics and advance Java.<br>Learned Android application development
+                            using java &#38; xml Languages. <br> Using Android Studio IDE Developed android App
+                            Screen and Functionalities.<br> Made a Production level build and hosted on the App
+                            Store.
+                        </p>
                     </div>
                 </div>
 
@@ -137,8 +145,8 @@
                         <h5>WebMind IT-Soln</h5>
                     </div>
                     <div class="text">
-                        <h4>Python Developer (Certified Intern)</h4>
-                        <p>Intership in Python &#38; ML Tecknology.</p>
+                        <h4>Python Developer (Certified)</h4>
+                        <p>Intership in Python  &#38; ML Tecknology. </p>
                         <p>Project: Enhancing Sentiment Analysis
                             based fake news detection using ELMO</p>
                     </div>
@@ -148,7 +156,7 @@
                 <h2 class="title2">Professional Skills</h2>
                 <div class="con">
                     <div class="box">
-                        <h4>ReactJs</h4>
+                        <h4>React Native</h4>
                         <div class="percent">
                             <div style="width: 60%;"></div>
                         </div>
@@ -156,7 +164,7 @@
                     <div class="box">
                         <h4>JavaScript</h4>
                         <div class="percent">
-                            <div style="width: 60%;"></div>
+                            <div style="width: 70%;"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -172,6 +180,18 @@
                         </div>
                     </div>
                     <div class="box">
+                        <h4>Native Wind</h4>
+                        <div class="percent">
+                            <div style="width: 60%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Material UI</h4>
+                        <div class="percent">
+                            <div style="width: 60%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
                         <h4>Node Js</h4>
                         <div class="percent">
                             <div style="width: 70%;"></div>
@@ -184,15 +204,15 @@
                         </div>
                     </div>
                     <div class="box">
-                        <h4>MongoDB</h4>
+                        <h4>SQL</h4>
                         <div class="percent">
                             <div style="width: 70%;"></div>
                         </div>
                     </div>
                     <div class="box">
-                        <h4>SQL</h4>
+                        <h4>MongoDB</h4>
                         <div class="percent">
-                            <div style="width: 50%;"></div>
+                            <div style="width: 60%;"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -201,6 +221,7 @@
                             <div style="width: 60%;"></div>
                         </div>
                     </div>
+
                     <div class="box">
                         <h4>GIT GITHUB</h4>
                         <div class="percent">
@@ -216,10 +237,9 @@
                 <h2 class="title2">Interest</h2>
                 <ul>
                     <li><i class="fa fa-code" aria-hidden="true"></i> Coding</li>
-                    <li><i class="fa fa-leanpub" aria-hidden="true"></i> Learning</li>
+                    <li><i class="fa fa-video-camera" aria-hidden="true"></i> Movies</li>
                     <li><i class="fa fa-plane" aria-hidden="true"></i> Travaling</li>
                     <li><i class="fa fa-tint" aria-hidden="true"></i> Swimming</li>
-
                 </ul>
             </div>
         </div>
